# advent-of-code-2024

./: .envrc  .gitignore  pyproject.toml  template.py
01/: puzzle_1.py  puzzle_2.py
02/: puzzle_1.py  puzzle_2.py
03/: puzzle_1.py  puzzle_2.py
04/: puzzle_1.py  puzzle_2.py
05/: puzzle_1.py  puzzle_2.py
06/: puzzle_1.py  puzzle_2.py
07/: puzzle_1.py  puzzle_2.py
08/: puzzle_1.py  puzzle_2.py
09/: puzzle_1.py  puzzle_2.py
10/: puzzle_1.py  puzzle_2.py
11/: puzzle_1.py  puzzle_2.py  puzzle_2_recursive.py
12/: puzzle_1.py  puzzle_2.py
13/: puzzle_1.py  puzzle_2.py
14/: puzzle_1.py  puzzle_2.py
15/: puzzle_1.py  puzzle_2.py
16/: puzzle_1.py  puzzle_2.py
17/: puzzle_1.py  puzzle_2.py
18/: puzzle_1.py  puzzle_2.py
19/: puzzle_1.py  puzzle_2.py
20/: puzzle_1.py  puzzle_2.py
21/: puzzle_1.py  puzzle_2.py
22/: puzzle_1.py  puzzle_2.py
23/: puzzle_1.py  puzzle_2.py
24/: puzzle_1.py  puzzle_2.py
25/: puzzle_1.py
